[gd_scene load_steps=12 format=3 uid="uid://bhobdiaqtx0u2"]

[ext_resource type="Script" path="res://6th Assignment _ Behavior Tree/scripts/knight_patrol.gd" id="1_et4rs"]
[ext_resource type="PackedScene" uid="uid://0cmupwvh3mbp" path="res://6th Assignment _ Behavior Tree/scenes/models/knight_model.tscn" id="1_ti06i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_td2wc"]
radius = 0.22249
height = 0.846347

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1bkml"]
animation = &"Attack"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_50d0d"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gqoi4"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_46r0i"]
animation = &"Run"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_878po"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ptfrh"]
graph_offset = Vector2(-133.063, 164.873)
nodes/AttackAnim/node = SubResource("AnimationNodeAnimation_1bkml")
nodes/AttackAnim/position = Vector2(500, 320)
nodes/AttackBlend/node = SubResource("AnimationNodeBlend2_50d0d")
nodes/AttackBlend/position = Vector2(660, 220)
nodes/IdleAnim/node = SubResource("AnimationNodeAnimation_gqoi4")
nodes/IdleAnim/position = Vector2(-20, 160)
nodes/RunAnim/node = SubResource("AnimationNodeAnimation_46r0i")
nodes/RunAnim/position = Vector2(100, 320)
nodes/RunBlend/node = SubResource("AnimationNodeBlend2_878po")
nodes/RunBlend/position = Vector2(320, 200)
nodes/output/position = Vector2(860, 160)
node_connections = [&"AttackBlend", 0, &"RunBlend", &"AttackBlend", 1, &"AttackAnim", &"RunBlend", 0, &"IdleAnim", &"RunBlend", 1, &"RunAnim", &"output", 0, &"AttackBlend"]

[sub_resource type="BoxMesh" id="BoxMesh_54e1l"]
size = Vector3(0.05, 0.05, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_ajw12"]
radius = 2.29747

[node name="Knight" type="CharacterBody3D" node_paths=PackedStringArray("animplyr", "animtree")]
collision_mask = 3
script = ExtResource("1_et4rs")
animplyr = NodePath("KnightModel/AnimationPlayer")
animtree = NodePath("AnimationTree")

[node name="KnightModel" parent="." instance=ExtResource("1_ti06i")]

[node name="Skeleton3D" parent="KnightModel/Knight_rig" index="8"]
bones/1/position = Vector3(0.011436, 0.185257, -0.0544286)
bones/3/rotation = Quaternion(-0.0150346, -1.68727e-05, 0.0013845, 0.999886)
bones/5/rotation = Quaternion(-0.00384219, 0.19726, 0.00785327, 0.980312)
bones/8/rotation = Quaternion(-0.283079, -0.374115, 0.481447, 0.740347)
bones/9/rotation = Quaternion(-0.759147, -0.000303997, -0.12482, 0.63884)
bones/10/rotation = Quaternion(0.140632, 0.907833, 0.151034, 0.365034)
bones/21/rotation = Quaternion(-0.278122, 0.32213, -0.517567, 0.742297)
bones/22/rotation = Quaternion(-0.778134, 0.000292575, 0.127943, 0.614929)
bones/23/rotation = Quaternion(0.196105, 0.959616, 0.15237, -0.132152)
bones/36/rotation = Quaternion(0.782756, 0.255768, -0.0496145, 0.565168)
bones/37/rotation = Quaternion(0.653685, 1.85452e-09, 8.63129e-08, 0.756767)
bones/38/rotation = Quaternion(-0.337234, -0.0436786, 0.181457, 0.922734)
bones/41/rotation = Quaternion(0.863423, -0.136081, -0.246092, 0.418834)
bones/42/rotation = Quaternion(0.682155, 9.50851e-09, -1.64276e-07, 0.731208)
bones/43/rotation = Quaternion(-0.484277, 0.329759, -0.259907, 0.767583)
bones/63/position = Vector3(0.238892, 0.356976, 0.094546)
bones/63/rotation = Quaternion(0.168333, -0.25845, 0.948625, -0.0705506)
bones/67/position = Vector3(-0.0928788, 0.382797, -0.238716)
bones/70/rotation = Quaternion(-0.171723, -0.455946, 0.871947, 0.0482925)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.425381, 0)
shape = SubResource("CapsuleShape3D_td2wc")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../KnightModel")
tree_root = SubResource("AnimationNodeBlendTree_ptfrh")
anim_player = NodePath("../KnightModel/AnimationPlayer")
parameters/AttackBlend/blend_amount = 0.0
parameters/RunBlend/blend_amount = 0.0

[node name="Looker" type="Marker3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Looker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.368256, 0.328847)
visible = false
mesh = SubResource("BoxMesh_54e1l")
skeleton = NodePath("../..")

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="EnemyDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyDetector"]
shape = SubResource("SphereShape3D_ajw12")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]

[editable path="KnightModel"]
